adicionado texto no body

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Curso Git e Github</title>
 </head>
 <body>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae perferendis quia dolore doloribus voluptatibus aspernatur ad ab, sint ipsam distinctio aperiam placeat dolorum ullam maiores, voluptas mollitia, nihil quisquam repellendus.</p>
     
 </body>
 </html>
